test/typePairError1.slq
def foo():(ğ”¹,ğ”¹){} /// error
